# notelib

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  README.md  create_installer.py
installer/config/: config.xml
src/: MainWindow.cpp  main.cpp
src/include/: MainWindow.h  MainWindow.hpp
src/ui/: MainWindow.ui
